# ultra240-example

./: .gitmodules  Makefile.am  README.md  configure.ac
share/applications/: example.desktop
share/example/: Makefile.am  example.tiled-session
share/example/img/: Makefile.am
share/example/tileset/: Makefile.am  alpha.tsx  bounds.tsx  skeleton.tsx  victor.tsx
share/example/world/: Makefile.am
share/example/world/alpha/: Makefile.am  alpha.tmx  alpha.world  beta.tmx  zeta.tmx
src/example/: Makefile.am  example.cc  example.h
src/example/entity/: Makefile.am  alpha_platform.cc  entity.cc  entity.h  single_sprite_entity.cc  single_sprite_entity.h  skeleton.cc  victor.cc
src/example/shader/: box.fsc  fs.fsc  fs_quad.fsc  rt.fsc  varying.def.sc  vs.vsc  vs_box.vsc  vs_pass.vsc
